@@ -113,30 +113,42 @@ class CDbCommandBuilder extends CComponent
 			$alias=$criteria->alias;
 		$alias=$this->_schema->quoteTableName($alias);
 
-		if(is_string($criteria->select) && stripos($criteria->select,'count')===0)
-			$sql="SELECT ".$criteria->select;
-		else if(!empty($criteria->group))
-			$sql="SELECT COUNT(DISTINCT {$criteria->group})";
-		else if($criteria->distinct)
+		if(!empty($this->group) || !empty($this->having))
 		{
-			if(is_array($table->primaryKey))
-			{
-				$pk=array();
-				foreach($table->primaryKey as $key)
-					$pk[]=$alias.'.'.$key;
-				$pk=implode(', ',$pk);
-			}
-			else
-				$pk=$alias.'.'.$table->primaryKey;
-			$sql="SELECT COUNT(DISTINCT $pk)";
+			$select=is_array($criteria->select) ? implode(', ',$criteria->select) : $criteria->select;
+			if($criteria->alias!='')
+				$alias=$criteria->alias;
+			$sql=($criteria->distinct ? 'SELECT DISTINCT':'SELECT')." {$select} FROM {$table->rawName} $alias";
+			$sql=$this->applyJoin($sql,$criteria->join);
+			$sql=$this->applyCondition($sql,$criteria->condition);
+			$sql=$this->applyGroup($sql,$criteria->group);
+			$sql=$this->applyHaving($sql,$criteria->having);
+			$sql="SELECT COUNT(*) FROM ($sql) sq";
 		}
 		else
-			$sql="SELECT COUNT(*)";
-		$sql.=" FROM {$table->rawName} $alias";
-		$sql=$this->applyJoin($sql,$criteria->join);
-		$sql=$this->applyCondition($sql,$criteria->condition);
-		$sql=$this->applyGroup($sql,$criteria->group);
-		$sql=$this->applyHaving($sql,$criteria->having);
+		{
+			if(is_string($criteria->select) && stripos($criteria->select,'count')===0)
+				$sql="SELECT ".$criteria->select;
+			else if($criteria->distinct)
+			{
+				if(is_array($table->primaryKey))
+				{
+					$pk=array();
+					foreach($table->primaryKey as $key)
+						$pk[]=$alias.'.'.$key;
+					$pk=implode(', ',$pk);
+				}
+				else
+					$pk=$alias.'.'.$table->primaryKey;
+				$sql="SELECT COUNT(DISTINCT $pk)";
+			}
+			else
+				$sql="SELECT COUNT(*)";
+			$sql.=" FROM {$table->rawName} $alias";
+			$sql=$this->applyJoin($sql,$criteria->join);
+			$sql=$this->applyCondition($sql,$criteria->condition);
+		}
+
 		$command=$this->_connection->createCommand($sql);
 		$this->bindValues($command,$criteria->params);
 		return $command;
