@@ -5,6 +5,7 @@
 Version 1.1.5 to be released
 ----------------------------
 - Bug #1130: Fixed the bug when renderDynamic and beginCache was used together without page caching (mdomba)
+- Bug #1244: Fixed the bug that CDbCommandBuilder::createCountCommand may generate invalid SQL when having and/or group options are used (Qiang)
 - Bug #1565: Fixed the bug that COutputCache may fail to work when used to cache whole pages (Qiang)
 - Bug #1577: Fixed the bug in CMssqlSchema::compareTableNames() (Qiang)
 - Bug #1592: Fixed the bug that the hidden field generated by CHtml::checkBox may have the same ID as the checkbox. (Qiang)
@@ -41,6 +42,7 @@ Version 1.1.5 to be released
 - Enh #1668: Added validation to ensure PHP keywords be not used as class names (Qiang)
 - Enh #1688: Refactored CDbMessageSource to allow easier extension (Qiang)
 - Enh #1699: Added capability to remove duplicated script files registered for different positions in CClientScript (Qiang)
+- Enh #1710: Upgraded treeview JavaScript to version 1.4.1 (mdomba)
 - Enh #1711: JavaScript registered in POS_LOAD will now be put in jQuery window load event instead of the previous global window load event (Qiang)
 - Enh: Upgraded JQuery UI to 1.8.5 (Sam Dark)
 - Enh: Added checking for empty keywords in addSearchCondition(), to prevent adding unnecessary conditions (mdomba)
